<resources>
    <string name="app_name">П.scanner</string>
    <string name="numdoc">Номер заявки:</string>
    <string name="notice">Комментарий:</string>
    <string name="photo">ФОТО</string>
    <string name="send">Отправить</string>
    <string name="gallery">галерея</string>
    <string name="settings">Настройки</string>
    <string name="history">История</string>
    <string name="clean">Очистить</string>
    <string name="dialog_history_save">Сохранить в историю?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save_always">Всегда сохранять</string>
    <string name="save_on_request">Спрашивать перед сохранением</string>
    <string name="save_when_failure">Сохранять только не отправленные</string>
    <string name="save_naver">Ничего не сохранять</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="exit">Выход</string>
    <string name="num_pas">Введите серию и номер паспорта</string>
    <string name="sent">Отправлено</string>
    <string name="not_sent">Не отправлено</string>
    <string name="onFailure">Не удалось отправить</string>
    <string name="onSuccess">Информация успешно отправлена</string>
    <string name="close">Закрыть</string>

    <string-array name="catNames">
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Васька</item>
        <item>Рыжик</item>
    </string-array>
</resources>