<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="24sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginTop="8dp"/>

    <Switch
        android:id="@+id/hs_always"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_always"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:paddingVertical="12dp"/>

    <Switch
        android:id="@+id/hs_on_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_on_request"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:paddingVertical="12dp"/>

    <Switch
        android:id="@+id/hs_when_failure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_when_failure"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:paddingVertical="12dp"/>

    <Switch
        android:id="@+id/hs_never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_naver"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:paddingVertical="12dp"/>

</LinearLayout>