<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numdoc" />

        <EditText
            android:id="@+id/edit_num_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--android:backgroundTint="@android:color/transparent"-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/notice" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/edit_notice"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="5"
        tools:ignore="RtlHardcoded" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/darker_gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/make_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/photo"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/sendToServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/send"
        android:visibility="invisible"
        android:layout_marginTop="8dp"/>


</LinearLayout>

<RelativeLayout
    android:id="@+id/preview_photo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:visibility="invisible">

    <ImageView
        android:id="@+id/big_photo"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/big_cross"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="-35dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/big_photo"
        android:src="@drawable/cross" />
</RelativeLayout>


</RelativeLayout>